# Platinmods-Menu

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Hack.cpp  Hack.hpp  Main.cpp  Memory.hpp  Menu.hpp  NativeMenu.cpp  NativeMenu.hpp
app/src/main/cpp/Includes/: Struct.hpp  Utils.hpp
app/src/main/cpp/Substrate/: SubstrateHook.cpp  SubstratePosixMemory.cpp
app/src/main/java/platinmods/menu/pmt/: Reborn.java  SetupActivity.java
gradle/wrapper/: gradle-wrapper.properties
